# learncpp

./: .gitignore
chapter_01/section_02/: Literal.cpp
chapter_01/section_03/: README.md
chapter_01/section_05/: README.md  cin_two_numbers.cpp  endl.cpp  question_2.cpp
chapter_01/section_06/: README.md  Uninitialized.cpp
chapter_01/section_11/: multiplyBy2.cpp  question_1.cpp
chapter_01/section_x/: README.md  question_3.cpp
chapter_02/section_02/: getValueFromUser.cpp  reusingFunctions.cpp
chapter_02/section_03/: printHi.cpp
chapter_02/section_04/: README.md  multiply.cpp  printDouble.cpp  printValues.cpp
chapter_02/section_05/: README.md  xLifeTime.cpp
chapter_02/section_07/: README.md
chapter_02/section_08/: README.md
chapter_02/section_10/: conditionalCompilation.cpp  ifZero.cpp  marcos.cpp  notDefine.cpp  scope.cpp
chapter_02/section_12/: README.md
chapter_02/section_x/: README.md  io.cpp
chapter_03/section_04/: cerr.cpp  printVariable.cpp
chapter_03/section_05/: debugFlag.cpp
lfx/: README.md  wasmedge_lfx_pretest2_practice.md
lfx/exercise_01/: README.md  alignment_probe.wat  invalid_declared_alignment.wat
lfx/exercise_02/: Makefile  README.md  guest_pointers.wat  host_alignment_guard.cpp
lfx/exercise_03/: README.md  run_alignment_tests.sh
lfx/exercise_04/: CMakeLists.txt  README.md
lfx/exercise_04/include/: memory.hpp
lfx/exercise_04/src/: memory.cpp
lfx/exercise_04/tests/: memory_tests.cpp
lfx/exercise_05/: CMakeLists.txt  README.md  misaligned_pointer_regression.wat  run_regression.sh  runner.cpp
(+62 files in other folders)
